# onest

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE  README.md
doc/: UserGuide.md
ext/glad/: ReadMe.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
src/: AssessmentMatrix.h  Exception.h  File.cpp  File.h  git.cpp  git.h  main.cpp
src/calc/: AssessmentMatrix.h  Category.h  CategoryFactory.cpp  CategoryFactory.h  ONEST.cpp  ONEST.h
src/category/: Category.h  CategoryFactory.cpp  CategoryFactory.h  CategoryMatcher.h  DiscreteCategoryMatcher.h  RangeBasedCategoryMatcher.h
src/csv/: Exporter.cpp  Exporter.h  Parser.cpp  Parser.h  ParserException.h  Sheet.h
src/gui/: AboutDialog.cpp  AboutDialog.h  CategoryGrid.cpp  CategoryGrid.h  ColumnNameGenerator.h  Diagram.cpp  Diagram.h  MainFrame.cpp  MainFrame.h  ResultGrid.cpp  ResultGrid.h  Table.cpp  Table.h  common.h
src/gui/rsc/: calculation_toggle_100.h  calculation_toggle_all.h  dice.h  header_toggle.h  icon.rc  plot_save.h
src/io/: File.cpp  File.h
src/rule/: Categorizer.cpp  Categorizer.h  IntervalRule.h  LiteralRule.h  OrRule.h  Parser.cpp  Parser.h  Rule.h
src/rule/parser/: ParseIntervalRule.cpp  ParseIntervalRule.h  ParseLiteralRule.h  ParseOrRule.h  Util.cpp  Util.h
test/: CMakeLists.txt  Test_AssessmentMatrix.cpp  Test_CategoryFactory.cpp  Test_ColumnNameGenerator.cpp  Test_Exporter.cpp  Test_File.cpp  Test_ONEST.cpp  Test_ONEST_Helper.h  Test_ONEST_Integration.cpp  Test_Parser.cpp  Test_RuleCategorizer.cpp  Test_RuleIntervalRule.cpp  Test_RuleLiteralRule.cpp  Test_RuleOrRule.cpp  Test_RuleParserIntervalRule.cpp  Test_RuleParserOrRule.cpp  Test_RuleParserUtil.cpp  main.cpp  test.h
test/rsc/: CRLF_UTF-8.txt  CR_UTF-8.txt  LF_UTF-8.txt  onest_input.csv  onest_output.csv
